--- a/css/style.css
+++ b/css/style.css
@@ -27,14 +27,18 @@ body{
 }
 
 .tribute-info{
-
+    box-sizing: border-box;
+    padding: 0 10vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .tribute-link{
 
 }
 .tribute-info h2{
-
+    
 }
 
 .tribute-info p{
