--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body{
     margin: 0;
+    font-size: 16px;
 }
 .main{
     background-color: #1985A1;
@@ -24,6 +25,7 @@ body{
 
 .img-container img{
     margin-bottom: 20px;
+    width: 80vw
 }
 
 .tribute-info{
@@ -34,13 +36,18 @@ body{
     align-items: center;
 }
 
-.tribute-link{
-
+.tribute-link__container {
+    display: flex;
+    justify-content: center;
 }
-.tribute-info h2{
-    
+.tribute-link {
+    font-weight: bold;
+    font-size: 37px;
 }
 
-.tribute-info p{
 
+@media (min-width: 500px) {
+    .tribute-link {
+        font-size: 16px;
+    }
 }
